product_service/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-product-service
  namespace: demo-product
  labels:
    app: demo-product
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: demo-product
