product_service/kustomize/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-product-gateway
  namespace: demo-product
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 15021
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-product-vservice
  namespace: demo-product
spec:
  hosts:
  - "*"
  gateways:
  - demo-product-gateway
  http:
  - route:
    - destination:
        host: demo-product-service
